[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/stagedetails/StageDetails.gd" type="Script" id=1]
[ext_resource path="res://scenes/stagedetails/Clouds.gd" type="Script" id=2]
[ext_resource path="res://assets/clouds/cloud3.PNG" type="Texture" id=3]
[ext_resource path="res://assets/clouds/cloud2.PNG" type="Texture" id=4]
[ext_resource path="res://assets/clouds/cloud1.PNG" type="Texture" id=5]
[ext_resource path="res://fonts/karma suture.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sounds/lighthearted_loop.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "show_characters"
length = 0.1
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_message_visibility"
} ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ) ]
}

[node name="StageDetails" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 511.0
margin_bottom = 319.0
color = Color( 0.403922, 0.713726, 0.933333, 1 )

[node name="lower" type="Node2D" parent="."]
modulate = Color( 0.607843, 0.635294, 0.752941, 1 )
script = ExtResource( 2 )

[node name="cloud3" type="Sprite" parent="lower"]
position = Vector2( 207.864, 162.779 )
scale = Vector2( 0.492785, 0.497686 )
texture = ExtResource( 3 )

[node name="cloud1" type="Sprite" parent="lower"]
position = Vector2( 533.878, 18.7003 )
scale = Vector2( 0.492785, 0.497686 )
texture = ExtResource( 4 )

[node name="cloud2" type="Sprite" parent="lower"]
position = Vector2( 483.892, 310.9 )
scale = Vector2( 0.455214, 0.271032 )
texture = ExtResource( 5 )

[node name="upper" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="cloud1" type="Sprite" parent="upper"]
position = Vector2( 433.17, 191.447 )
scale = Vector2( 0.455214, 0.323713 )
texture = ExtResource( 5 )

[node name="cloud2" type="Sprite" parent="upper"]
position = Vector2( 108.251, 297.301 )
scale = Vector2( 0.652872, 0.6104 )
texture = ExtResource( 4 )

[node name="cloud3" type="Sprite" parent="upper"]
position = Vector2( -40.6058, 41.8558 )
scale = Vector2( 0.515655, 0.405799 )
texture = ExtResource( 4 )
flip_h = true

[node name="details" type="Node2D" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="details"]
margin_left = -105.0
margin_top = 85.0
margin_right = 596.0
margin_bottom = 256.0
color = Color( 0.14902, 0.141176, 0.141176, 0.572549 )

[node name="Message" type="Label" parent="details"]
margin_left = 35.7947
margin_top = 98.9404
margin_right = 472.795
margin_bottom = 218.94
custom_fonts/font = SubResource( 1 )
text = "Hey! So you are the hero? The farm-type hero! And you are here to help me! Right?

Don't worry I will not tell you a story!  It is just here to practice my godotanimation! Nevermind!"
autowrap = true
percent_visible = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="details"]
margin_left = 238.906
margin_top = 188.919
margin_right = 278.906
margin_bottom = 228.919

[node name="Anim" type="AnimationPlayer" parent="details"]
anims/show_characters = SubResource( 2 )

[node name="Skip" type="Label" parent="details"]
margin_left = 218.323
margin_top = 231.555
margin_right = 502.323
margin_bottom = 251.555
custom_fonts/font = SubResource( 3 )
text = "Press [SPACE] to skip this nonsense..."
align = 2

[node name="Anim" type="AnimationPlayer" parent="details/Skip"]
anims/blink = SubResource( 4 )

[node name="Anim" type="AnimationPlayer" parent="."]

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
